WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256651
SVG syncbase animation no longer supports cyclic references
https://bugs.webkit.org/show_bug.cgi?id=256651
Summary
SVG syncbase animation no longer supports cyclic references
Ahmad Saleem
Reported
2023-05-11 10:20:39 PDT
Hi Team, While going through Blink's commit, I came across another potential merge, which can fix another WPT test case: WPT Testcase Progression:
http://wpt.live/svg/animations/cyclic-syncbase.html
Blink Commit (Partial Merge only):
https://src.chromium.org/viewvc/blink?view=revision&revision=162961
Local patch fix this bug. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2023-05-11 12:33:01 PDT
***
Bug 127174
has been marked as a duplicate of this bug. ***
EWS
Comment 2
2023-05-12 09:14:18 PDT
Committed
264018@main
(12d5ef3e4f40): <
https://commits.webkit.org/264018@main
> Reviewed commits have been landed. Closing PR #13761 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-12 09:15:27 PDT
<
rdar://problem/109266866
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug