SVG syncbase animation no longer supports cyclic references

https://bugs.webkit.org/show_bug.cgi?id=256651

Reviewed by Simon Fraser.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Partial Merge: https://src.chromium.org/viewvc/blink?view=revision&revision=162961

This patch removes the logic of reconnecting the conditions which was added before to support
dynamic interactions of eventbases using JS.
It was breaking the syncbase logic for cyclic references as there is common code used for both eventbases and syncbases.

* Source/WebCore/svg/animation/SVGSMILElement.cpp:
(SVGSMILElement::resolveNextInterval): Remove 'bool notifyDependents' and usage
(SVGSMILElement::checkRestart): Ditto
(SVGSMILElement::seekToIntervalCorrespondingToTime): Ditto
(SVGSMILElement::progres): Add 'connectConditions'
* Source/WebCore/svg/animation/SVGSMILElement.h: Remove 'bool' argument from 'resolveNextInterval'
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/cyclic-syncbase-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/264018@main